@@ -4,3 +4,4 @@ npm install
 mvn spring-boot:run
 npm run serve
 npm run build
+vm option：--add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
